fix(align):text-align-center

--- a/src/modules/Dashboard/modules/components/Table.scss
+++ b/src/modules/Dashboard/modules/components/Table.scss
@@ -153,6 +153,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   padding: 5px;
   color: #303030;
   font-size: 12px;
